--- a/TIC/Simple Todo/index.html
+++ b/TIC/Simple Todo/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8" />
-        <title>Simple Todo </title>
-        <link rel="stylesheet" href="main.css" />
-    </head>
-    <body>
-        <main>
-            
-        </main>
-        
-        <script src="app.js"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Simple Todo</title>
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
+    <main>
+        <header>
+            <input placeholder="Enter your TODO" name="" class="input" />
+            <button class="addbtn">Add</button>
+        </header>
+    </main>
+
+    <script src="app.js"></script>
+  </body>
 </html>
