SETTING UP CONTAINER

--- a/TIC/Simple Todo/index.html
+++ b/TIC/Simple Todo/index.html
@@ -11,6 +11,7 @@
             <input placeholder="Enter your TODO" name="" class="input" />
             <button class="addbtn">Add</button>
         </header>
+        <div class="container"></div>
     </main>
 
     <script src="app.js"></script>
