--- a/TIC/Simple Todo/index.html
+++ b/TIC/Simple Todo/index.html
@@ -11,7 +11,12 @@
             <input placeholder="Enter your TODO" name="" class="input" />
             <button class="addbtn">Add</button>
         </header>
-        <div class="container"></div>
+        <div class="container">
+            <div class="note">
+                <p id="id"> ID : </p> <p id="note"> fuck you mother fckers</p>
+                <button class="delete">Delete</button>
+            </div>
+        </div>
     </main>
 
     <script src="app.js"></script>
