--- a/TIC/Simple Todo/index.html
+++ b/TIC/Simple Todo/index.html
@@ -16,6 +16,11 @@
                 <p id="id"> ID : </p> <p id="note"> fuck you mother fckers</p>
                 <button class="delete">Delete</button>
             </div>
+
+            <div class="note">
+                <p id="id"> ID : </p> <p id="note"> fuck you mother fckers</p>
+                <button class="delete">Delete</button>
+            </div>
         </div>
     </main>
 
