--- a/Rev with the boys/o/index.html
+++ b/Rev with the boys/o/index.html
@@ -24,7 +24,11 @@
     </label>
     <input type="radio" name="sex" id="man" />
     <br/>
-    <button onclick="Check()">Check ? </button>
+
+
+    <br/>
+    <input type="text" placeholder="Enter your email" id="email" />
+    <button id="zebb">Check ? </button>
     <script src="app.js"></script>
 </body>
 </html>
