--- a/TIC/Devoir/syn1/signup.html
+++ b/TIC/Devoir/syn1/signup.html
@@ -4,10 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <title>Document</title>
 </head>
 <body>
-    <iframe src="menu.html"  > </iframe>
-    <iframe name="myFrame" src="imc.html"></iframe>
+    
 </body>
 </html>
