--- a/TIC/Devoir/syn1/index.html
+++ b/TIC/Devoir/syn1/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
 </head>
-<body>
-    <iframe src="menu.html"  > </iframe>
-    <iframe name="myFrame" src="imc.html"></iframe>
+<body> 
+    <div style="display: flex;align-items: center;justify-content: center; width: 100%; height: 100vh;">
+        <iframe src="menu.html"  width="30%" height="100%"> </iframe>
+    <iframe name="myFrame" src="imc.html" width="70%" height="100%"></iframe>
+    </div>
 </body>
 </html>
