--- a/TIC/Devoir/syn1/imc.html
+++ b/TIC/Devoir/syn1/imc.html
@@ -7,6 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>Calculer IMC</h1>
+    <form action="" method="" >
+        <label>Poid </label>
+        <input type="text" id="poid"/>
+        <br/>
+        <label>Taille</label>
+        <input type="text" id="taille" />
+
+        <br/>
+        <button type="button" onclick="Imc()" >Click</button>
+    </form>
+
+    <script src="app.js"></script>
 </body>
 </html>
