--- a/TIC/Devoir/syn1/menu.html
+++ b/TIC/Devoir/syn1/menu.html
@@ -10,7 +10,7 @@
     <div>
         <ul>
             <li>
-                <a href="" target="myFrame">Home</a>
+                <a href="acceuil.html" target="myFrame">Home</a>
             </li>
             <li>
                 <a href="imc.html" target="myFrame">IMC</a>
