--- a/TIC/Devoir/syn1/index.html
+++ b/TIC/Devoir/syn1/index.html
@@ -9,7 +9,7 @@
 <body> 
     <div style="display: flex;align-items: center;justify-content: center; width: 100%; height: 100vh;">
         <iframe src="menu.html"  width="30%" height="100%"> </iframe>
-    <iframe name="myFrame" src="imc.html" width="70%" height="100%"></iframe>
+    <iframe name="myFrame" src="acceuil.html" width="70%" height="100%"></iframe>
     </div>
 </body>
 </html>
