--- a/TIC/Devoir/syn1/signup.html
+++ b/TIC/Devoir/syn1/signup.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <form action="" method="POST">
+        <fieldset>
+            <legend>Sign Up</legend>
+            <input type="text" name="username" placeholder=""/>
+        </fieldset>
+    </form>
 </body>
 </html>
