--- a/TIC/PiggieTalk/Front/index.html
+++ b/TIC/PiggieTalk/Front/index.html
@@ -59,7 +59,7 @@
                             <path d="M41.6664 72.5786C32.3914 52.4655 37.4044 35.2896 41.8377 31.6941C44.6993 29.3732 62.5327 33.1436 75.9077 44.6684C61.8671 51.4933 50.2624 61.7909 42.5408 74.2648C42.224 73.7134 41.9323 73.1509 41.6664 72.5786ZM191.859 78.4209C197.359 72.8941 204.393 58.8142 208.946 51.2865C208.946 51.2865 195.391 44.9685 179.11 32.9149C171.053 26.9499 166.96 22.9815 150.848 42.3244C168.843 49.6581 183.416 62.4965 191.859 78.4209Z" fill="#E583C9"/>
                             <path d="M160.703 32.5284C192.597 30.3888 189.909 58.3288 190.056 67.8571C190.056 67.8571 213.67 65.284 213.925 56.345C214.179 47.4061 189.061 7.84166 160.703 32.5284Z" fill="#FFA1E0"/>
                         </svg>
-                        <a href="./signUp.html" class="acc_Link">Piggie want's you to create an account !</a>
+                        <a href="./SignUp/index.html" class="acc_Link">Piggie want's you to create an account !</a>
                     </aside>
                 </div>
             </div>
