form css signUp

--- a/TIC/PiggieTalk/Front/SignUp/index.html
+++ b/TIC/PiggieTalk/Front/SignUp/index.html
@@ -25,7 +25,8 @@
                 <form action="" method="POST">
                     <div class="input">
                         <p><i class="fa fa-user-circle-o" aria-hidden="true"></i> </p>  
-                    </div>
+                        <input type="text" placeholder="Enter UserName" />
+                     </div>
                 </form>
             </div>
         </div>
