adding info inputs

--- a/TIC/PiggieTalk/Front/SignUp/index.html
+++ b/TIC/PiggieTalk/Front/SignUp/index.html
@@ -27,6 +27,37 @@
                         <p><i class="fa fa-user-circle-o" aria-hidden="true"></i> </p>  
                         <input type="text" placeholder="Enter UserName" />
                      </div>
+                     <div class="input">
+                        <p><i class="fa fa-envelope-o" aria-hidden="true"></i> </p>  
+                        <input type="text" placeholder="Enter Email Adress" />
+                     </div>
+
+                     <div class="input">
+                        <p><i class="fa fa-user" aria-hidden="true"></i></p>  
+                        <input type="text" placeholder="Enter First Name" />
+                     </div>
+
+                     <div class="input">
+                        <p><i class="fa fa-user" aria-hidden="true"></i></p>  
+                        <input type="text" placeholder="Enter Last Name" />
+                     </div>
+                     <div class="input">
+                        <p><i class="fa fa-calendar" aria-hidden="true"></i></p>  
+                        <p style="font-size: 13px;font-weight: bold;display: block;margin-left:10px;">BirthDate</p><input type="date" style="width:auto !important;color:#fff;" />
+                     </div>
+                     <div class="input">
+                        <p><i class="fa fa-unlock-alt" aria-hidden="true"></i></p>  
+                        <input type="password" placeholder="Enter Password" />
+                     </div>
+
+                     <div class="selectInput">
+                         <div>
+                             <p>Male <input type="radio" name="sex" /></p>
+                         </div>
+                         <div >
+                             <p>Female  <input type="radio" name="sex" /></p>
+                         </div>
+                     </div>
                 </form>
             </div>
         </div>
