finished signUp UI

--- a/TIC/PiggieTalk/Front/SignUp/index.html
+++ b/TIC/PiggieTalk/Front/SignUp/index.html
@@ -55,10 +55,13 @@
                              <p>Male <input type="radio" name="sex" /></p>
                          </div>
                          <div >
-                             <p>Female  <input type="radio" name="sex" /></p>
+                             <p>Female  <input type="radio" name="sex" /> </p>
                          </div>
                      </div>
+                     <button type="submit" class="submit">Create the account !</button>
+                     <a href="./../index.html" id="goBack">Already Having an account ? </a>
                 </form>
+                <br/><br/>
             </div>
         </div>
         
