--- a/TIC/PiggieTalk/Front/SignUp/index.html
+++ b/TIC/PiggieTalk/Front/SignUp/index.html
@@ -25,29 +25,29 @@
                 <form action="" method="POST">
                     <div class="input">
                         <p><i class="fa fa-user-circle-o" aria-hidden="true"></i> </p>  
-                        <input type="text" placeholder="Enter UserName" />
+                        <input type="text" placeholder="Enter UserName" name="username" />
                      </div>
                      <div class="input">
                         <p><i class="fa fa-envelope-o" aria-hidden="true"></i> </p>  
-                        <input type="text" placeholder="Enter Email Adress" />
+                        <input type="text" placeholder="Enter Email Adress" name="email" />
                      </div>
 
                      <div class="input">
                         <p><i class="fa fa-user" aria-hidden="true"></i></p>  
-                        <input type="text" placeholder="Enter First Name" />
+                        <input type="text" placeholder="Enter First Name" name="fname" />
                      </div>
 
                      <div class="input">
                         <p><i class="fa fa-user" aria-hidden="true"></i></p>  
-                        <input type="text" placeholder="Enter Last Name" />
+                        <input type="text" placeholder="Enter Last Name" name="lname" />
                      </div>
                      <div class="input">
                         <p><i class="fa fa-calendar" aria-hidden="true"></i></p>  
-                        <p style="font-size: 13px;font-weight: bold;display: block;margin-left:10px;">BirthDate</p><input type="date" style="width:auto !important;color:#fff;" />
+                        <p style="font-size: 13px;font-weight: bold;display: block;margin-left:10px;">BirthDate</p><input type="date" name="date" style="width:auto !important;color:#fff;" />
                      </div>
                      <div class="input">
                         <p><i class="fa fa-unlock-alt" aria-hidden="true"></i></p>  
-                        <input type="password" placeholder="Enter Password" />
+                        <input type="password" placeholder="Enter Password" name="password" />
                      </div>
 
                      <div class="selectInput">
