--- a/TIC/PiggieTalk/Front/SignUp/index.html
+++ b/TIC/PiggieTalk/Front/SignUp/index.html
@@ -52,13 +52,13 @@
 
                      <div class="selectInput">
                          <div>
-                             <p>Male <input type="radio" name="sex"  /></p>
+                             <p>Male <input type="radio" name="sex"   /></p>
                          </div>
                          <div >
                              <p>Female  <input type="radio" name="sex" /> </p>
                          </div>
                      </div>
-                     <button type="submit" class="submit">Create the account !</button>
+                     <button type="button" class="submit" onclick="checkSignUp()">Create the account !</button>
                      <a href="./../index.html" id="goBack">Already Having an account ? </a>
                 </form>
                 <br/><br/>
