--- a/TIC/project/index.html
+++ b/TIC/project/index.html
@@ -27,9 +27,9 @@
             <option value="4tech">4eme Technique</option>
         </select>
         <br/>
-        <button id="checkBTN" type="button">Submit</button>
+        <button id="btn" type="button">Submit</button>
         <button type="reset">Reset</button>
     </form>
-    
+    <script src="./app.js"></script>
 </body>
 </html>
