--- a/TIC/project/index.html
+++ b/TIC/project/index.html
@@ -14,8 +14,8 @@
         <input type="text" name="name" />
         <br/>
         <label>Genre</label>
-        <input  type="radio" name="sex" value="m"  /><label>Masculin</label>
-        <input  type="radio" name="sex" value="f" /><label>Feminin</label>
+        <input  type="radio" name="sex" value="M"  /><label>Masculin</label>
+        <input  type="radio" name="sex" value="F" /><label>Feminin</label>
         <br/>
         <label>Adresse</label>
         <input type="email" name="email" />
