--- a/TIC/PiggieTalk/Front/SignUp/index.html
+++ b/TIC/PiggieTalk/Front/SignUp/index.html
@@ -22,7 +22,7 @@
                 </svg> <p>Piggie Talk  :  Create an account  </p>
             </div>
             <div class="main">
-                <form action="" method="POST">
+                <form action="./../../Backend/src/signUp.php" method="POST">
                     <div class="input">
                         <p><i class="fa fa-user-circle-o" aria-hidden="true"></i> </p>  
                         <input type="text" placeholder="Enter UserName" name="username" required />
