--- a/TIC/project/index.html
+++ b/TIC/project/index.html
@@ -29,6 +29,7 @@
       <button id="btn" type="submit" >Submit</button>
       <button type="reset">Reset</button>
     </form>
+    <a href="./fetchDatas.php">Fetch datas !</a>
     <script src="./app.js"></script>
   </body>
 </html>
