JS input control

--- a/TIC/project/index.html
+++ b/TIC/project/index.html
@@ -23,7 +23,8 @@
       <select name="nc">
         <option>Niveau scolaire</option>
         <option value="4si">4eme science informatique</option>
-        <option value="4math">4eme Math</option        <option value="4tech">4eme Technique</option>
+        <option value="4math">4eme Math</option>
+        <option value="4tech">4eme Technique</option>
       </select>
       <br />
       <button id="btn" type="submit" >Submit</button>
