--- a/TIC/project/update.html
+++ b/TIC/project/update.html
@@ -9,13 +9,13 @@
 <body>
     <h1>Update email ! </h1>
     <br/>
-    <form action="">
+    <form action="" >
         <label>Id</label>
         <input type="text" name="id" />
         <label>Email</label>
         <input type="email" name="email" />
         <br/>
-        <button type="submit">Submit</button>
+        <button type="button" onclick="checkUp()">Submit</button>
     </form>
     <script src="./app.js"></script>
 </body>
