--- a/TIC/project/update.html
+++ b/TIC/project/update.html
@@ -12,10 +12,11 @@
     <form action="" >
         <label>Id</label>
         <input type="text" name="id" />
+        <br/>
         <label>Email</label>
         <input type="email" name="email" />
         <br/>
-        <button type="button" onclick="checkUp()">Submit</button>
+        <button type="button"  onclick="Upcheck()">Submit</button>
     </form>
     <script src="./app.js"></script>
 </body>
