--- a/TIC/project/index.html
+++ b/TIC/project/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width= , initial-scale=1.0" />
-    <title>Document</title>
+    <title>Add Data </title>
   </head>
   <body>
     <form action="./send.php" method="POST" name="myForm" onsubmit="return check()">
