added just a link

--- a/TIC/project/update.html
+++ b/TIC/project/update.html
@@ -18,6 +18,7 @@
         <br/>
         <button type="submit"  >Submit</button>
     </form>
+    <a href="./fetchDatas.php">All the datas ! </a>
     <script src="./app.js"></script>
 </body>
 </html>
