--- a/TIC/project/index.html
+++ b/TIC/project/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width= , initial-scale=1.0" />
-    <title>Add Data </title>
+    <title>Add Data</title>
   </head>
   <body>
-    <form action="./send.php" method="POST" name="myForm" onsubmit="return check()">
+    <form
+      action="./send.php"
+      method="POST"
+      name="myForm"
+      onsubmit="return check()"
+    >
       <h1>Formulaire scolaire</h1>
       <br />
       <label>Nom et prenom </label>
@@ -27,7 +32,7 @@
         <option value="4tech">4eme Technique</option>
       </select>
       <br />
-      <button id="btn" type="submit" >Submit</button>
+      <button id="btn" type="submit">Submit</button>
       <button type="reset">Reset</button>
     </form>
     <a href="./fetchDatas.php">Fetch datas !</a>
