iframems files and stffs

--- a/TIC/project/menu.html
+++ b/TIC/project/menu.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+
+    <ul>
+        <li><a href="./add.html">Add data ! </a></li>
+        <li><a href="./fetchDatas.php">Get all the datas ! </a></li>
+        <li><a href="./update.html">update </a></li>
+    </ul>    
 </body>
 </html>
