--- a/TIC/project/index.html
+++ b/TIC/project/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <iframe src="./menu.html" width="100%" height="100px"></iframe>
+    <iframe src="add.html" width="100%" height="800px" name="container" ></iframe>
 </body>
 </html>
