--- a/TIC/project/menu.html
+++ b/TIC/project/menu.html
@@ -9,9 +9,9 @@
 <body>
 
     <ul>
-        <li><a href="./add.html">Add data ! </a></li>
-        <li><a href="./fetchDatas.php">Get all the datas ! </a></li>
-        <li><a href="./update.html">update </a></li>
+        <li><a href="./add.html" target="container">Add data ! </a></li>
+        <li><a href="./fetchDatas.php" target="container">Get all the datas ! </a></li>
+        <li><a href="./update.html" target="container">update </a></li>
     </ul>    
 </body>
 </html>
