--- a/SUM/TIC/REV/index.html
+++ b/SUM/TIC/REV/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
   </head>
   <body>
-    <form action="tst.php" method="POST">
-      <input type="text" placeholder="Num ala rasek" name="num" />
-      <button type="submit">sub ya houma</button>
-    </form>
+    <div style="height: 100vh" width="100%">
+      <iframe src="./menu.html" width="24%" height="100%"></iframe>
+      <iframe
+        src="./commande.html"
+        name="container"
+        width="75%"
+        height="100%"
+      ></iframe>
+    </div>
   </body>
 </html>
