--- a/SUM/prototype/p1/menu.html
+++ b/SUM/prototype/p1/menu.html
@@ -7,9 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div style="width: 100%;height:100vh;">
-        <iframe src="./menu.html" width="24%" height="85%"></iframe>
-        <iframe src="./ajoutClient.html" width="75%" height="85%"></iframe>
-    </div>
+    <ul>
+        <li><a href="./ajoutClient.html">Ajout d'un client</a></li>
+        <li><a href="./lister.php">Etat des voitures</a></li>
+        <li><a href="./retour.html">Retour d'une voiture</a></li>
+    </ul>
 </body>
 </html>
