php stffs datas

--- a/SUM/prototype/p1/ajoutClient.html
+++ b/SUM/prototype/p1/ajoutClient.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <form action="" method="" onsubmit="return test1()">
+        <form action="./ajoutClient.php" method="POST" onsubmit="return test1()">
             <fieldset>
                 <legend>Ajout d'un client </legend>
                 <table width="800px">
