--- a/SUM/prototype/p1/index.html
+++ b/SUM/prototype/p1/index.html
@@ -9,7 +9,7 @@
 <body>
     <div style="width: 100%;height:100vh;">
         <iframe src="./menu.html" width="24%" height="85%"></iframe>
-        <iframe src="./ajoutClient.html" width="75%" height="85%"></iframe>
+        <iframe src="./ajoutClient.html" width="75%" height="85%" name="myFrame"></iframe>
     </div>
 </body>
 </html>
