--- a/SUM/prototype/p1/menu.html
+++ b/SUM/prototype/p1/menu.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <ul>
-        <li><a href="./ajoutClient.html">Ajout d'un client</a></li>
-        <li><a href="./lister.php">Etat des voitures</a></li>
-        <li><a href="./retour.html">Retour d'une voiture</a></li>
+        <li><a href="./ajoutClient.html" target="myFrame">Ajout d'un client</a></li>
+        <li><a href="./lister.php" target="myFrame">Etat des voitures</a></li>
+        <li><a href="./retour.html" target="myFrame">Retour d'une voiture</a></li>
     </ul>
 </body>
 </html>
