--- a/SUM/prototype/p1/retour.html
+++ b/SUM/prototype/p1/retour.html
@@ -7,6 +7,25 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div>
+        <form action="" method="">
+
+            <fieldset>
+                <legend>Retour d'une voiture</legend>
+                <table>
+                    <tr>
+                        <td><label >Numero d'immatriculation </label></td>
+
+                        <td>
+                            <input type="text" name="serie" id="serie" /> <label> TU </label> 
+                            <input type="text" name="enr" id="enr">
+                        </td>
+                    </tr>
+                </table>
+            </fieldset>
+        </form>
+    </div>
     
 </body>
 </html>
