--- a/SUM/prototype/p1/retour.html
+++ b/SUM/prototype/p1/retour.html
@@ -9,7 +9,7 @@
 <body>
 
     <div>
-        <form action="" method="">
+        <form action="./" method="">
 
             <fieldset>
                 <legend>Retour d'une voiture</legend>
@@ -21,11 +21,22 @@
                             <input type="text" name="serie" id="serie" /> <label> TU </label> 
                             <input type="text" name="enr" id="enr">
                         </td>
+                        
+                    </tr>
+
+                    <tr>
+                        <td></td>
+                        <td>
+                            <button type="reset">Annuler</button>
+                            &nbsp;&nbsp;
+                            <button type="submit">Valider</button>
+                        </td>
                     </tr>
                 </table>
             </fieldset>
         </form>
     </div>
     
+    <script src="./test.js"></script>
 </body>
 </html>
