--- a/SUM/prototype/p1/retour.html
+++ b/SUM/prototype/p1/retour.html
@@ -9,7 +9,7 @@
 <body>
 
     <div>
-        <form action="./" method="">
+        <form action="./retour.php" method="GET" onsubmit="return verif2()">
 
             <fieldset>
                 <legend>Retour d'une voiture</legend>
