prepared more files

--- a/MACHIAVELLI PRINCIPAL/STI/index.html
+++ b/MACHIAVELLI PRINCIPAL/STI/index.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Devoir</title>
+
+    <style>
+        div{
+            width:100%;
+            height: 100vh;
+
+        }
+
+    </style>
 </head>
 <body>
-    
+    <div> 
+        <iframe src="" width="24%" height="80px"   name="zone1"></iframe>
+        <iframe src="" width="75%" height="75%" name="zone2"></iframe>
+
+        
+    </div>
 </body>
 </html>
