--- a/MACHIAVELLI PRINCIPAL/STI/index.html
+++ b/MACHIAVELLI PRINCIPAL/STI/index.html
@@ -17,10 +17,10 @@
 </head>
 <body>
     <div> 
-        <iframe src="" width="24%" height="80px"   name="zone1"></iframe>
-        <iframe src="" width="75%" height="75%" name="zone2"></iframe>
+        <iframe src="./menu.html" width="24%" height="800px"   name="zone1"></iframe>
+        <iframe src="./enregistrement.html" width="75%" height="800px" name="zone2"></iframe>
 
-        
+
     </div>
 </body>
 </html>
