some uis and saving datas !

--- a/MACHIAVELLI PRINCIPAL/STI/enregistrement.html
+++ b/MACHIAVELLI PRINCIPAL/STI/enregistrement.html
@@ -8,7 +8,7 @@
 <body>
     
     <div>
-        <form action="" method="POST" onsubmit="return verif1()">
+        <form action="./enregistrement.php" method="POST" onsubmit="return verif1()">
             <fieldset>
                 <legend>Enregistrement d'un testeur </legend>
 
