--- a/MACHIAVELLI PRINCIPAL/STI/menu.html
+++ b/MACHIAVELLI PRINCIPAL/STI/menu.html
@@ -8,6 +8,8 @@
 <body>
     <ul>
         <li><a href="./enregistrement.html" target="zone2" > Enregistrement d'un testeur</a></li>
+        <li><a href="./evaluation.html" target="zone2" > Evaluation d'un modele</a></li>
+        <li><a href="./bilan.php" target="zone2" > Bilan des evaluations</a></li>
     </ul>
 </body>
 </html>
