--- a/MACHIAVELLI PRINCIPAL/STI/evaluation.html
+++ b/MACHIAVELLI PRINCIPAL/STI/evaluation.html
@@ -31,8 +31,30 @@
                         </td>
                        </tr>
                        <tr>
-                           
-                       </tr>
+                           <td>
+                               <label>Notes attribues</label>
+                           </td>
+                           <td><input type="text" name="sec" id="sec"> <label > securite </label>
+                            <input type="text" name="cond" id="cond"> <label > conduite </label>
+                            <input type="text" name="conf" id="conf"> <label > confort </label>
+                        </td>
+
+                        </tr>
+
+                        <tr>
+                            <td>
+                                <label >je ne suis pas un robot ! </label>
+                                <td><input type="checkbox" name="robot" id="robot"></td>
+                            </td>
+
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td>
+                                <button type="reset">Annuler</button>
+                                <button type="submit">Valider</button>
+                            </td>
+                        </tr>
                     </table>
                 </table>
             </fieldset>
