--- a/MACHIAVELLI PRINCIPAL/STI/evaluation.html
+++ b/MACHIAVELLI PRINCIPAL/STI/evaluation.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-        <form action="" method="" onsubmit="">
+        <form action="" method="POST" onsubmit="return verif2()">
             <fieldset>
                 <legend>
                     Evaluation d'un modele ! 
@@ -60,5 +60,6 @@
             </fieldset>
         </form>
     </div>
+    <script src="./controle.js"></script>
 </body>
 </html>
