--- a/MACHIAVELLI PRINCIPAL/STI/evaluation.html
+++ b/MACHIAVELLI PRINCIPAL/STI/evaluation.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-        <form action="" method="POST" onsubmit="return verif2()">
+        <form action="./evaluation.php" method="POST" onsubmit="return verif2()">
             <fieldset>
                 <legend>
                     Evaluation d'un modele ! 
